@@ -4,8 +4,9 @@ Entry, (E)mulation speed, emulation_speed, INPUT_KEY_e, 3, %
 Entry, F(r)ame rate (1:n), frame_rate, INPUT_KEY_r, 1, frames
 Checkbox, Issue (2) Keyboard, issue2, INPUT_KEY_2
 Checkbox, Use (t)ape traps, tape_traps, INPUT_KEY_t
+Checkbox, (F)astloading, fastload, INPUT_KEY_f
 Checkbox, (A)uto-load media, auto_load, INPUT_KEY_a
-Checkbox, Use .(s)lt traps, slt_traps, INPUT_KEY_s
+Checkbox, Use .s(l)t traps, slt_traps, INPUT_KEY_l
 Checkbox, Allow (w)rites to ROM, writable_roms, INPUT_KEY_w
 Checkbox, A(u)to-save settings, autosave_settings, INPUT_KEY_u
 Entry, (M)DR cartridge len, mdr_len, INPUT_KEY_m, 3, block
@@ -13,7 +14,7 @@ Checkbox, Raw RS-2(3)2, raw_rs232, INPUT_KEY_3
 Checkbox, Raw Sinclair(N)ET, raw_s_net, INPUT_KEY_n
 Checkbox, Black and white T(V), bw_tv, INPUT_KEY_v
 #ifdef UI_SDL
-Checkbox, (F)ull screen, full_screen, INPUT_KEY_f
+Checkbox, Full (s)creen, full_screen, INPUT_KEY_f
 #endif
 Checkbox, (C)onfirm actions, confirm_actions, INPUT_KEY_c
 Checkbox, Show status(b)ar, statusbar, INPUT_KEY_b
